# supercollider-mcp

./: Cargo.toml  README.md
src/: main.rs  sc_process.rs  server.rs  startup.rs  streamable_http.rs  supercollider_model.rs
